# cmake_template2

./: CMakeLists.txt  README.md  foo.cpp  main.cpp  test.cpp
source/: localmath.cpp
src/: config.h.in
tests/: math.t.cpp  numbers.t.cpp
